# talonic-node

./: .gitignore  .prettierrc  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.bundled_5w5hdpp0ypd.mjs  tsup.config.ts  vitest.config.ts  vitest.live.config.ts
.github/workflows/: ci.yml  publish.yml
docs/: sections.json
examples/: debug.ts
integrations/: PLAN.md  README.md
integrations/langchain/: README.md  package.json  tsconfig.json  tsup.config.ts
integrations/langchain/src/: index.ts  schema.ts
integrations/langchain/tests/: tool.test.ts
integrations/llamaindex/: README.md  pyproject.toml
integrations/llamaindex/talonic_llamaindex/: __init__.py
integrations/n8n/: README.md  gulpfile.js  index.js  package.json  shared.ts  tsconfig.json
integrations/n8n/credentials/: TalonicApi.credentials.ts
integrations/n8n/tests/: node.test.ts  shared.test.ts
integrations/vercel-ai-sdk/: README.md  package.json  tsup.config.ts
integrations/vercel-ai-sdk/src/: index.ts  schema.ts
integrations/zapier/: README.md  package.json  vitest.config.js
scripts/: check-spec.ts
src/: cli.ts  client.ts  errors.ts  index.ts  transport.ts  types.ts  version.ts
src/content/: helpers.ts  index.ts  seo.ts  types.ts
src/resources/: credits.ts  documents.ts  extract.ts  extractions.ts  fields.ts  jobs.ts  pagination.ts  pricing.ts  schemas.ts  search.ts  usage.ts
tests/: cli-symlink.test.ts  cli.test.ts  client.test.ts  errors.test.ts  live.test.ts  resources.test.ts  smoke.test.ts  transport.test.ts
(+12 files in other folders)
