# SCAFFOLD — not published to PyPI. See integrations/PLAN.md.
[project]
name = "talonic-llamaindex"
version = "0.1.0"
description = "Talonic document-extraction tool for LlamaIndex (scaffold)."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Talonic GmbH", email = "info@talonic.ai" }]
requires-python = ">=3.9"
dependencies = [
  # "llama-index-core>=0.11",
  # "httpx>=0.27",
  # "talonic",  # the Talonic Python SDK, once published
]
keywords = ["talonic", "llamaindex", "tool", "agent", "document-extraction"]

[project.urls]
Homepage = "https://talonic.com"
Repository = "https://github.com/talonicdev/talonic-node"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["talonic_llamaindex"]
